Added username property to User model. Issue 4

--- a/views/register.html
+++ b/views/register.html
@@ -4,6 +4,8 @@
 <body>    
   <h1>Register</h1>    
   <form method="post">            
+    <div>Username</div>
+    <input type="text" name="username"/>
     <div>Email</div>
     <input type="text" name="email"/>
     <div>Password</div>
