--- a/views/login.html
+++ b/views/login.html
@@ -4,8 +4,8 @@
 <body>
   <h1>Login</h1>
   <form method="post">    
-    <div>Email</div>
-    <input type="text" name="email"/>
+    <div>Username</div>
+    <input type="text" name="username"/>
     <div>Password</div>
     <input type="password" name="password"/>
     <div><input type="submit" value="Login"/></div>    
