--- a/views/index.html
+++ b/views/index.html
@@ -34,17 +34,9 @@
 <!-- TODO: add sign out -->
 <div id="signIn">
 {% if user_name %}
-  <h1>Logged in as {{ user_name }}</h1>
   <A HREF="/signout">Sign out</A>
 {% else %}
- <h1>Login</h1>
-  <form method="post" action=".">    
-    <div>Username</div>
-    <input type="text" name="username"/>
-    <div>Password</div>
-    <input type="password" name="password"/>
-    <div><input type="submit" value="Login"/></div>    
-  </form>
+  <A HREF="/login">Sign in</A>
   <A HREF="/register">Sign up</A>
 {% endif %}
 </div>
