--- a/views/login.html
+++ b/views/login.html
@@ -1,18 +1,27 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 
-  4.0 Transitional//EN">
-<html>
-<body>
-  <h1>Login</h1>
-  <form method="post">    
-    <div>Username</div>
-    <input type="text" name="username" value="{{ user_name }}"/>
-    <div>Password</div>
-    <input type="password" name="password" value="{{ password }}"/>
-    <div><input type="submit" value="Login"/></div>    
-  </form>
-{% ifequal login "fail" %}
-Login failed. Wrong password or username.
-{% endifequal %}
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block content %}
+  <h1>Welcome back!</h1>
+  <div class="account">
+    <form method="post">    
+    <fieldset>          
+      <div>
+      <label for="username">Username</label>
+      <input type="text" name="username" value="{{ user_name }}"/>
+      </div>
+      
+      <div>
+      <label for="password">Password</label>
+      <input type="password" name="password" value="{{ password }}"/>
+      </div>
+      
+      {% ifequal login "fail" %}
+        <div class="error">Login failed. Wrong password or username</div>
+      {% endifequal %}
+        
+      <input type="submit" value="Log in"/>          
+    </fieldset>
+    </form>
+ <div class="account">
+
+{% endblock %}
